# mcp-spotify-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
mcp_spotify/: agent.py  intents.json  server.py
scripts/: check_models.py
test/: test_auth.py
